# spec

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  WHITEPAPER.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc_proposal.yml  spec_clarification.yml
.github/workflows/: ci.yml
examples/: README.md
schemas/: README.md  v1.audit.json  v1.capabilities.json  v1.quote.json  v1.reserve.json  v1.search.json  v1.settle.json
sdks/python/: README.md  pyproject.toml
sdks/python/facet_sdk/: __init__.py  audit.py  errors.py  terminal.py  verifier.py
sdks/python/tests/: test_audit_conformance.py  test_kyapay_conformance.py
sdks/typescript/: .npmignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdks/typescript/examples/: verify.ts
sdks/typescript/examples/hello-agent/: README.md  (+1 more)
sdks/typescript/src/: audit.ts  index.ts  terminal.ts  types.ts  verifier.ts
sdks/typescript/test/: audit.test.ts  conformance.test.ts
test-vectors/: README.md  generate.py  generate_audit.py
test-vectors/audit/: 01-valid-audit.json  02-tampered-amount.json  03-wrong-key.json  04-missing-required-field.json  05-non-ascii-merchant.json
test-vectors/kyapay/: 01-valid-kya-jwt.json  02-expired.json  03-wrong-audience.json  04-wrong-algorithm.json  05-tampered-signature.json  06-no-expected-issuers.json  07-missing-kid.json  08-http-issuer.json  09-bad-custom-claim.json  10-nbf-within-tolerance.json
