[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facet-sdk"
version = "0.0.1"
description = "Reference Python SDK for the Facet Protocol. KYAPay verifier, Terminal client, audit verifier."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Facet" }]
keywords = ["agentic-commerce", "kyapay", "x402", "mcp", "facet", "agent-identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "cryptography>=42",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://facet.llc"
Repository = "https://github.com/facet-llc/protocol"
Issues = "https://github.com/facet-llc/protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["facet_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
